dataset1235/2025-2/805158916/users/674524038/executions/3435325918_3974737893.log
== RUN (2025-09-03 14:30:08)
-- CODE: 
x = int(input("Valor de x: "))
y = int(input("Valor de y: "))
if (x % y = 0):
  print("nao")
else:
  print("sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 3
    if (x % y = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 3
    if (x % y = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 3
    if (x % y = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 3
    if (x % y = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 3
    if (x % y = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 3
    if (x % y = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:30:23)
-- CODE: 
x = int(input("Valor de x: "))
y = int(input("Valor de y: "))
if (x % y == 0):
  print("nao")
else:
  print("sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
Valor de x: Valor de y: sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
Valor de x: Valor de y: nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
Valor de x: Valor de y: nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
Valor de x: Valor de y: nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
Valor de x: Valor de y: sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
Valor de x: Valor de y: sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:33:46)
-- CODE: 
x = int(input("Valor inteiro: "))
y = int(input("Divisor: "))
if (x % y == 0):
  print(x // y)
  print("sim")
else:
  print(x % y)
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:34:08)
-- CODE: 
x = int(input("Valor inteiro: "))
y = int(input("Divisor: "))
if (x % y == 0):
  print(x // y)
  print("sim")
else:
  print(x % y)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
